kubernetes/webapp/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webapp-ingress
  namespace: webapp
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - http:
        paths:
          - pathType: Exact
            path: /v1
            backend:
              service:
                name: webapp-service-v1
                port:
                  number: 8080
          - pathType: Exact
            path: /v2
            backend:
              service:
                name: webapp-service-v2
                port:
                  number: 8080
